# TI_LP-MSPM0C1104_demo

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  flash.jlink  flash_openocd.ps1
src/: main.c
